--- a/source/_posts/test/未命名.md
+++ b/source/_posts/test/未命名.md
@@ -25,3 +25,39 @@ updated: 2024-12-03 15:32:01 星期二
 flexoki-light 
 ![](attachments/img/ly-20241203171922664.jpg)Borderless-light 
 ![](attachments/img/ly-20241203172002669.jpg)
+
+转换规则
+
+%3c 48+12=60  <
+%3e 48+14=62   >
+%23 32+3=35    #
+
+
+%2b  32+11=43  + 
+%3b ;
+%2c ,
+
+上面是必须的，下面貌似不需要？  
+
+------  
+
+
+则会个网站转出来的svg可以用上：https://codepen.io/yoksel/details/MWKeKK
+
+```
+url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle r='50' cx='50' cy='50' fill='tomato'/%3E%3Ccircle r='41' cx='47' cy='50' fill='orange'/%3E%3Ccircle r='33' cx='48' cy='53' fill='gold'/%3E%3Ccircle r='25' cx='49' cy='51' fill='yellowgreen'/%3E%3Ccircle r='17' cx='52' cy='50' fill='lightseagreen'/%3E%3Ccircle r='9' cx='55' cy='48' fill='teal'/%3E%3C/svg%3E")
+```
+确定用上了的
+```
+url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle r='50' cx='50' cy='50' fill='tomato'/%3E%3Ccircle r='41' cx='47' cy='50' fill='orange'/%3E%3Ccircle r='33' cx='48' cy='53' fill='gold'/%3E%3Ccircle r='25' cx='49' cy='51' fill='yellowgreen'/%3E%3Ccircle r='17' cx='52' cy='50' fill='lightseagreen'/%3E%3Ccircle r='9' cx='55' cy='48' fill='teal'/%3E%3C/svg%3E")  top/cover no-repeat fixed
+```
+
+从这个答案里来的
+https://stackoverflow.com/questions/41405884/svg-data-image-as-css-background
+https://www.base64-image.de/
+https://codepen.io/yoksel/details/MWKeKK
+https://www.google.com.hk/search?q=data%3Aimage%2Fsvg%2Bxml%2C%253csvg+xmlns%3D%27http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg&newwindow=1&sca_esv=75315e11642a04a4&sxsrf=ADLYWIKn284G9X0kNMzFhpFm_4r7StssCA%3A1733244242963&source=hp&ei=UjVPZ7TfN6_8ptQPzKel-QU&iflsig=AL9hbdgAAAAAZ09DYiRJHrdDv5HGDexNymia6OGXc0j9&ved=0ahUKEwi00KH7hYyKAxUvvokEHcxTKV8Q4dUDCBg&uact=5&oq=data%3Aimage%2Fsvg%2Bxml%2C%253csvg+xmlns%3D%27http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg&gs_lp=Egdnd3Mtd2l6IjtkYXRhOmltYWdlL3N2Zyt4bWwsJTNjc3ZnIHhtbG5zPSdodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZzIHECMYJxjqAjIHECMYJxjqAjIHECMYJxjqAjIHECMYJxjqAjIHECMYJxjqAjIHECMYJxjqAjIHECMYJxjqAjIHECMYJxjqAjIHECMYJxjqAjIHECMYJxjqAkjRBlCfAVifAXABeACQAQCYAQCgAQCqAQC4AQPIAQD4AQL4AQGYAgGgAgmoAgqYAwmSBwExoAcA&sclient=gws-wiz
+https://products.aspose.app/imaging/zh-hans/conversion/svg-to-base64/navigation/uploaded/result
+https://forever-z-133.github.io/demos/single/svg-to-base64.html
+
+
