--- a/source/_posts/life/20220416.md
+++ b/source/_posts/life/20220416.md
@@ -13,4 +13,5 @@ updated: 2022-04-16 17:11:47
 
   每个人对自己的过往，或多或少都会不甘。如果这种不甘自己没有办法化解，那么就会在某一刻爆发。每个人都应该，也必定会为自己曾经的所作所为负责。不要懵懵懂懂地进入(现代)婚姻，这样对自己和它人都极其不负责。 爆炸式的信息接收会激发你所有的冲动与不甘。  
 
-<iframe src="//player.bilibili.com/player.html?aid=211411097&bvid=BV1aa411y7u9&cid=505755578&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+
+{{< html-iframe src="//player.bilibili.com/player.html?aid=211411097&bvid=BV1aa411y7u9&cid=505755578&page=1" >}}
