--- a/source/_posts/life/20231101.md
+++ b/source/_posts/life/20231101.md
@@ -5,8 +5,10 @@ categories:
   - 生活
 date: 2023-11-01 11:26:17
 updated: 2023-11-01 11:26:17
----
-<iframe src="//player.bilibili.com/player.html?aid=842039534&bvid=BV1m54y1C7SV&cid=233766005&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+---  
+
+
+{{< html-iframe src="//player.bilibili.com/player.html?aid=842039534&bvid=BV1m54y1C7SV&cid=233766005&p=1" >}}  
 
 > 附(20231102)  
 >
