--- a/source/_posts/study/algorithm/algorithhms_4th/1.3.1.1-1.3.2.5.md
+++ b/source/_posts/study/algorithm/algorithhms_4th/1.3.1.1-1.3.2.5.md
@@ -28,7 +28,7 @@ tags:
   ![ly-20241129104646537](attachments/img/ly-20241129104646537.png)
 * 泛型  
   * 泛型，参数化类型  
-  * 在每份API 中，类名后的<Item> 记号将Item 定义为一个类型参数，它是一个象征性的占位符，表示的是用例将会使用的某种具体数据类型  
+  * 在每份API 中，类名后的```<Item> ```记号将Item 定义为一个类型参数，它是一个象征性的占位符，表示的是用例将会使用的某种具体数据类型  
 * 自动装箱  
   * 用来处理原始类型  
   * Boolean、Byte、Character、Double、Float、Integer、Long 和Short 分别对应着boolean、byte、char、double、float、int、long 和short  
@@ -79,7 +79,7 @@ tags:
 
 - 泛型  
 
-  - `public class FixedCapacityStack<Item>`
+  - ```public class FixedCapacityStack<Item>```
   - 由于不允许直接创建泛型数组，所以 ~~a =new Item[cap]~~ 不允许，应该改为  
     a=(Item[])new Object[cap];  
   - 泛型定容栈的抽象数据类型  
@@ -117,7 +117,7 @@ tags:
     - 集合数据类型必须实现iterator()并返回Iterator对象
     - Iterator类必须包括两个方法,hasNext()和next()
 
-  - 让类继承Iterable<Item>使类可迭代
+  - 让类继承```Iterable<Item>```使类可迭代
     ![ly-20241129104652668](attachments/img/ly-20241129104652668.png)
 
   - 使用一个嵌套类  
