--- a/source/_posts/study/git/git_sgg/09-18.md
+++ b/source/_posts/study/git/git_sgg/09-18.md
@@ -95,7 +95,7 @@ updated: 2022-07-24 16:39:11
 
        ![ly-20241129104824155](attachments/img/ly-20241129104824155.png)
 
-     - git restore --staged <file>..." to unstage
+     - ```git restore --staged <file>..." to unstage```
        使用这个命令丢弃这个文件的commit操作
 
        >  几个命令的区别：
