--- a/source/_posts/study/maven/base_dljd/01-16.md
+++ b/source/_posts/study/maven/base_dljd/01-16.md
@@ -276,7 +276,7 @@ updated: 2022-07-02 18:58:00
 
 ## pom-打包类型
 
-<packaging> 项目打包类型
+```<packaging> ```项目打包类型
 
 ```xml
 <?xml version="1.0" encoding="UTF-8" ?>
