--- a/source/_posts/problem/linux/20230919.md
+++ b/source/_posts/problem/linux/20230919.md
@@ -30,7 +30,7 @@ text ~/*.txt {a,b} $(echo foo) $((2+2)) $USER
 
 | [ expression ] / test                                        | [[ expression ]]                                             | $(( expression )) | $var   | $( termi )       |
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ----------------- | ------ | ---------------- |
-| 文件表达式 -e file，字符串表达式 -n string，整数表达式 integer1 -eq integer2 | test增强，增加 [ str =~ regex ]，增加 ==<br /> [[ $FILE == foo.* ]] | 整数加减乘除取余  | 取变量 | 执行命令/函数    |
+| 文件表达式 -e file，字符串表达式 -n string，整数表达式 integer1 -eq integer2 | test增强，增加 [ str =~ regex ]，增加 =={{< html-br >}} [[ $FILE == foo.* ]] | 整数加减乘除取余  | 取变量 | 执行命令/函数    |
 | termi取变量$必加，里面被看作命令参数，< > ( ) 必须转义 否则 小于号 <  大于号>被认为重定向 | 与[ ] 一致                                                   | 取变量$可加可不加 |        | termi取变量$必加 |
 |                                                              |                                                              |                   |        |                  |
 
