--- a/source/_posts/study/algorithm/algorithhms_4th/3.1.1-3.1.7.md
+++ b/source/_posts/study/algorithm/algorithhms_4th/3.1.1-3.1.7.md
@@ -71,7 +71,7 @@ updated: 2022-06-12 21:52:57
     ![ly-20241129104713145](attachments/img/ly-20241129104713145.png)
 
   - 迭代
-    在API第一行加上implements Iterable<Key> ，所有实现都包含iterator()方法来实现hasNext()和next()方法的迭代器；这里采用另一种方式：定义keys返回一个Iterable<Key>对象以方便便利所有的键，且允许遍历一部分
+    在API第一行加上```implements Iterable<Key>``` ，所有实现都包含iterator()方法来实现hasNext()和next()方法的迭代器；这里采用另一种方式：定义keys返回一个```Iterable<Key>```对象以方便便利所有的键，且允许遍历一部分
 
   - 键的等价性
     自定义的键需要重写equals()方法；且最好使用不可变数据类型作为键
