--- a/source/_posts/study/jvm/understanding_the_jvm/03.md
+++ b/source/_posts/study/jvm/understanding_the_jvm/03.md
@@ -10,15 +10,7 @@ updated: 2023-05-25 20:04:33
 ---
 
 > 学习《深入理解Java虚拟机》，感谢作者！
-
-# 在线地址
-
-<a target="_blank" href="/myjs/pdfjs/web/viewer.html?file=https://raw.githubusercontent.com/lwmfjc/files/main/pdfs/work/jvm/understanding_the_jvm/2_ 第3章 垃圾收集器与内存分配策略.pdf">2_ 第3章 垃圾收集器与内存分配策略</a>
-
-# 内容
-
-<iframe src='/myjs/pdfjs/web/viewer.html?file=https://raw.githubusercontent.com/lwmfjc/files/main/pdfs/work/jvm/understanding_the_jvm/2_ 第3章 垃圾收集器与内存分配策略.pdf' marginwidth="0" frameborder="no" scrolling="no"  style="padding: 0;width:100%;height: 0px;width: 0px;" ></iframe>
-
+ 
 ### 代码清单3-9 -XX:MaxTenuringThreshod=1说明
 
 |                     | Eden[8M]                             | Survivor1[1M]       | Survivor2[1M] | Old {10M}                             |
@@ -43,11 +35,11 @@ updated: 2023-05-25 20:04:33
 
 |                     | Eden[8M]                                                     | Survivor1[1M]                                     | Survivor2[1M] | Old {10M}                                                    |
 | ------------------- | ------------------------------------------------------------ | ------------------------------------------------- | ------------- | ------------------------------------------------------------ |
-| 初始                | allocation1[0.25M]，<br />allocation2[[0.25M]，allocation3[4M] |                                                   |               |                                                              |
-| 4执行时gc导致的变化 |                                                              | +allocation1[0.25M]，<br />+allocation2[[0.25M]， |               | +allocation3[4MB]                                            |
-| 4执行后             | +allocation4[4MB]                                            | +allocation1[0.25M]，<br />+allocation2[[0.25M]， |               | +allocation3[4MB]                                            |
-| 6执行时gc导致的变化 |                                                              |                                                   |               | allocation3[4MB]，<br />+allocation1[0.25M]，<br />+allocation2[[0.25M]， |
-| 6执行后             | +allocation4[4MB]                                            |                                                   |               | allocation3[4MB]，<br />+allocation1[0.25M]，<br />+allocation2[[0.25M]， |
+| 初始                | allocation1[0.25M]，{{< html-br >}}allocation2[[0.25M]，allocation3[4M] |                                                   |               |                                                              |
+| 4执行时gc导致的变化 |                                                              | +allocation1[0.25M]，{{< html-br >}}+allocation2[[0.25M]， |               | +allocation3[4MB]                                            |
+| 4执行后             | +allocation4[4MB]                                            | +allocation1[0.25M]，{{< html-br >}}+allocation2[[0.25M]， |               | +allocation3[4MB]                                            |
+| 6执行时gc导致的变化 |                                                              |                                                   |               | allocation3[4MB]，{{< html-br >}}+allocation1[0.25M]，{{< html-br >}}+allocation2[[0.25M]， |
+| 6执行后             | +allocation4[4MB]                                            |                                                   |               | allocation3[4MB]，{{< html-br >}}+allocation1[0.25M]，{{< html-br >}}+allocation2[[0.25M]， |
 
 ### 代码清单3-11 说明
 
@@ -55,12 +47,12 @@ updated: 2023-05-25 20:04:33
 
 |                      | Eden[8M]                                                     | Survivor1[1M] | Survivor2[1M] | Old {10M}                                                    |
 | -------------------- | ------------------------------------------------------------ | ------------- | ------------- | ------------------------------------------------------------ |
-| 初始                 | allocation1[2M]，<br />allocation2[2M]，<br />allocation3[2M]<br />allocation1[null]，allocation4[2M] |               |               |                                                              |
+| 初始                 | allocation1[2M]，{{< html-br >}}allocation2[2M]，{{< html-br >}}allocation3[2M]{{< html-br >}}allocation1[null]，allocation4[2M] |               |               |                                                              |
 | 5执行时gc导致的变化  |                                                              |               |               | +allocation2[2M]，+allocation3[2M] //总共4M                  |
 | 5执行后              | +allocation4[2M]                                             |               |               | +allocation2[2M]，+allocation3[2M] //总共4M                  |
-| 6->11                | allocation4[2M]<br />+allocation5[2M]，<br />+allocation6[2M] |               |               | allocation2[2M]，<br />allocation3[2M] //总共4M，<br />此时老年代连续可用空间在6M（或者说小于6M） |
-| 11执行时gc导致的变化 |                                                              |               |               | allocation3[4MB]，<br />+allocation1[0.25M]，<br />+allocation2[[0.25M]， |
-| 11执行后             | +allocation7[2MB]                                            |               |               | allocation3[4MB]，<br />+allocation1[0.25M]，<br />+allocation2[[0.25M]， |
+| 6->11                | allocation4[2M]{{< html-br >}}+allocation5[2M]，{{< html-br >}}+allocation6[2M] |               |               | allocation2[2M]，{{< html-br >}}allocation3[2M] //总共4M，{{< html-br >}}此时老年代连续可用空间在6M（或者说小于6M） |
+| 11执行时gc导致的变化 |                                                              |               |               | allocation3[4MB]，{{< html-br >}}+allocation1[0.25M]，{{< html-br >}}+allocation2[[0.25M]， |
+| 11执行后             | +allocation7[2MB]                                            |               |               | allocation3[4MB]，{{< html-br >}}+allocation1[0.25M]，{{< html-br >}}+allocation2[[0.25M]， |
 
 
 
